# enum-bits-rs

./: .gitlab-ci.yml  Cargo.toml  LICENSE  README.md
enum_bits_derive/: Cargo.toml
enum_bits_derive/src/: imp.rs  lib.rs
enum_primitive_derive/: Cargo.toml
enum_primitive_derive/src/: imp.rs  lib.rs
git_hooks/: pre-commit
src/: lib.rs
tests/: i128.rs  i16.rs  i32.rs  i64.rs  i8.rs  test.rs  u128.rs  u16.rs  u32.rs  u64.rs  u8.rs
