[package]
name = "enum_bits"
version = "0.1.0"
authors = ["Andrei V <andrei@ptaxa.net>"]
edition = "2018"
license = "MIT"

homepage = "https://gitlab.com/PtaxLaine/enum-bits-rs"
repository = "https://gitlab.com/PtaxLaine/enum-bits-rs"

keywords = ["enum", "primitive", "integer", "derive"]
categories = ["encoding"]

[badges]
gitlab = { repository = "https://gitlab.com/PtaxLaine/enum-bits-rs", branch = "master" }
maintenance = { status = "passively-maintained" }

[dependencies]
enum_bits_derive = {path="./enum_bits_derive"}
lazy_static = "1.2"

[features]
repr128 = []
